{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 258,
  "lineage": "92825991-2dbc-6975-d4e9-793a25e56a7d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "web_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/instanceGroups/web-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-11T21:59:39.357-08:00",
            "enable_cdn": false,
            "fingerprint": "osGJ9gMS5r0=",
            "generated_id": 1718029819613417892,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/healthChecks/http-basic-check"
            ],
            "id": "projects/cis91fa25noel/global/backendServices/web-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "web-backend-service",
            "port_name": "http",
            "project": "cis91fa25noel",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/backendServices/web-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T13:29:38.473-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis91fa25noel/global/firewalls/allow-db",
            "log_config": [],
            "name": "allow-db",
            "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis91fa25noel",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/firewalls/allow-db",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T13:29:38.540-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis91fa25noel/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis91fa25noel",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-11T21:58:33.348-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis91fa25noel/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis91fa25noel",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T21:58:33.397-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cis91fa25noel/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
            "priority": 1000,
            "project": "cis91fa25noel",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "db",
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cis91fa25noel/global/forwardingRules/http-content-rule",
            "ip_address": "34.149.189.170",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "cis91fa25noel",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "database_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "db-backup",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/disks/db-backup"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis91fa25noel/zones/us-central1-c/instances/db-instance",
            "instance_id": "7361601268711035386",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "KPC9exelQRE=",
            "name": "db-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.31.116.244",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
                "network_ip": "10.128.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis91fa25noel"
              }
            ],
            "project": "cis91fa25noel",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/instances/db-instance",
            "service_account": [
              {
                "email": "vm-wiki-sa@cis91fa25noel.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_disk.db_backup_disk",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/disks/web-instance-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis91fa25noel/zones/us-central1-c/instances/web-instance-0",
            "instance_id": "8999812519662326266",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "google-ops-agent-policy": "{\"agentRules\":[{\"type\":\"ops-agent\",\"version\":\"latest\",\"packageState\":\"installed\"}]}"
            },
            "metadata_fingerprint": "k15gI9ZYEqg=",
            "name": "web-instance-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.197.102.6",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
                "network_ip": "10.128.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis91fa25noel"
              }
            ],
            "project": "cis91fa25noel",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/instances/web-instance-0",
            "service_account": [
              {
                "email": "vm-wiki-sa@cis91fa25noel.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/disks/web-instance-4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cis91fa25noel/zones/us-central1-c/instances/web-instance-4",
            "instance_id": "721826582101365030",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "google-ops-agent-policy": "{\"agentRules\":[{\"type\":\"ops-agent\",\"version\":\"latest\",\"packageState\":\"installed\"}]}"
            },
            "metadata_fingerprint": "k15gI9ZYEqg=",
            "name": "web-instance-4",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.111.253.234",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network",
                "network_ip": "10.128.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "cis91fa25noel"
              }
            ],
            "project": "cis91fa25noel",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/zones/us-central1-c/instances/web-instance-4",
            "service_account": [
              {
                "email": "vm-wiki-sa@cis91fa25noel.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cis91fa25noel/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2441994815606786401",
            "project": "cis91fa25noel",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T22:00:42.838-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/cis91fa25noel/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "cis91fa25noel",
            "proxy_bind": false,
            "proxy_id": 7686990847209247077,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/urlMaps/lb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_compute_url_map.default",
            "google_service_account.vm_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T22:00:31.527-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/backendServices/web-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "lww6rqlXjHU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cis91fa25noel/global/urlMaps/lb-url-map",
            "map_id": 7756271732005409168,
            "name": "lb-url-map",
            "path_matcher": [],
            "project": "cis91fa25noel",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cis91fa25noel/global/urlMaps/lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.web_backend_service",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_instance",
            "google_compute_instance_group.web_instance_group",
            "google_compute_network.vpc_network",
            "google_service_account.vm_sa"
          ]
        }
      ]
    }
  ]
}